docker_build/examples/multi_rpm_submodules/repos/app-multi-rpm-submodules/kubeobjs/deploymentconfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: multi-rpm-submodules
  labels:
    app: multi-rpm-submodules
spec:
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - multi-rpm-submodules
        from:
          kind: ImageStreamTag
          name: multi-rpm-submodules:latest
  replicas: 1
  selector:
    app: multi-rpm-submodules
    deploymentconfig: multi-rpm-submodules
  template:
    metadata:
      labels:
        app: multi-rpm-submodules
        deploymentconfig: multi-rpm-submodules
      name: multi-rpm-submodules
    spec:
      containers:
        - name: multi-rpm-submodules
          image: ' '
          ports:
            - containerPort: 8000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
