docker_build/examples/multi_rpm_submodules/repos/app-multi-rpm-submodules/kubeobjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: multi-rpm-submodules
  labels:
    app: multi-rpm-submodules
spec:
  ports:
    - name: 8000-tcp
      protocol: TCP
      port: 8000
      targetPort: 8000
  selector:
    app: multi-rpm-submodules
    deploymentconfig: multi-rpm-submodules
