docker_build/examples/multi_rpm_submodules/repos/app-multi-rpm-submodules/kubeobjs/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: multi-rpm-submodules
  labels:
    app: multi-rpm-submodules
spec:
  to:
    kind: Service
    name: multi-rpm-submodules
